# wscribe

./: .envrc.example  .gitignore  LICENSE  Makefile  Makefile.common  README.org  TEMPLATE_INFO.org  localsetup.py  poop.json  pyproject.toml  run.py
.github/workflows/: test.yml
docs/: README.md
examples/output/: sample.json  sample.srt  sample.vtt
scripts/: download_the_internet.sh  fw_dw_hf_wo_lfs.sh  speed_check.sh
src/bake/: ingregients.py  kitchen.py
src/bake/recipies/: easy.py
src/wscribe/: __init__.py  core.py  kitchen.py  writers.py
src/wscribe/backends/: fasterwhisper.py
src/wscribe/cli/: main.py
src/wscribe/recipies/: difficult.py
src/wscribe/sources/: local.py
tests/: conftest.py  test_bake.py  test_wscribe.py
