[tool.poetry]
name = "wscribe"
version = "0.1.5"
description = "ez audio transcription tool with flexible processing and post-processing options"
authors = ["Hrishikesh Barman <oss@geekodour.org>"]
homepage = "https://github.com/geekodour/wscribe"
license = "MIT"
readme = "docs/README.md"
packages = [{include = "wscribe", from = "src"}]

[tool.poetry.scripts]
wscribe = "wscribe.cli.main:cli"

[tool.poetry.dependencies]
# tool.*.group.*.dependencies$ : These can only be installed via poetry
# tool.poetry.*$ : These can be installed via pip also
python = "^3.10"
structlog = "^23.1.0"
faster-whisper = "^0.9.0"
click = "^8.1.6"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
ipython = "^8.13.2"
isort = "^5.12.0"
ruff = "^0.0.270"
black = "^23.3.0"
snoop = "^0.4.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
